2009-10-19: .002
  - Remove unused statement, edit perldoc

2009-10-16: .001 - Hello World