@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Devel-Pillbug
-version:             0.002
+version:             0.003
 abstract:            ~
 license:             perl
 author:              
