@@ -1,3 +1,8 @@
+2009-10-22: .003
+  - Update examples
+  - Avoid handle_cgi_request entirely, it makes it impossible to reap status
+  - CLI wrapper defaults to using hostname() for its server name
+
 2009-10-19: .002
   - Remove unused statement, edit perldoc
 
